--- a/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
+++ b/src/Members/Bundle/ManagementBundle/Resources/views/Admin/header.html.twig
@@ -59,12 +59,12 @@
                     {% set image_url = prefix ~"uploads/profilepictures/prpf/"
                         ~currentUser.getProfilePicture.path %}                        
                     {% if currentUser.getProfilePicture.widthVsHeight == 0 %}
-                        <img class="photo equal" src="{{ prefix ~ image_url }}"/>
+                        <img class="photo equal" src="{{ image_url }}"/>
                     {% elseif currentUser.getProfilePicture.widthVsHeight == 1 %}
                         <span class="helper"></span>
-                        <img class="photo fat-profile-image" src="{{ prefix ~ image_url }}"/>
+                        <img class="photo fat-profile-image" src="{{ image_url }}"/>
                     {% elseif currentUser.getProfilePicture.widthVsHeight == 2 %}
-                        <img class="photo tall-profile-image" src="{{ prefix ~ image_url }}"/>
+                        <img class="photo tall-profile-image" src="{{ image_url }}"/>
                     {% endif%}
                 {% else %}
                     <img class="photo equal" src="{{ asset('pp/index.png') }}"/>
