--- a/src/FrontEnd/scss/mobile_styles/mobile_fos/mobile_fos_main.scss
+++ b/src/FrontEnd/scss/mobile_styles/mobile_fos/mobile_fos_main.scss
@@ -8,6 +8,7 @@ $rouge: #c1272d;
 @import 'dashboard_validation_styles';
 @import 'dashboard_header';
 @import 'homepage_login';
+@import 'dashboard_profile.scss';
 @import '../mobile_header.scss';
 
 *
