--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Header/mobileAdminHeader.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Header/mobileAdminHeader.html.twig
@@ -23,7 +23,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="{{ path('mobile_profile') }}">
                     {{ 'menu.my_settings'| trans}}
                 </a>
             </li>
