--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileShow.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileShow.html.twig
@@ -68,16 +68,15 @@
                             id="post-owner-image"
                             data-wVsH="{{entity.user.getProfilePicture.widthVsHeight}}">
                             {% set createdAt = entity.user.getCreatedAt %}
-                            {% set image_url = 'pp/'~createdAt|date('Y')~'/'
-                            ~createdAt|date('m')~'/'
+                            {% set image_url = prefix ~ 'uploads/profilepictures/prpf/'
                             ~entity.user.getProfilePicture.path %}
                             {% if entity.user.getProfilePicture.widthVsHeight == 0 %}
-                            <img class="photo equal" src="{{ prefix ~ image_url }}"/>
+                            <img class="photo equal" src="{{ image_url }}"/>
                             {% elseif entity.user.getProfilePicture.widthVsHeight == 1 %}
                             <span class="helper"></span>
-                            <img class="photo fat-profile-image" src="{{ prefix ~ image_url }}"/>
+                            <img class="photo fat-profile-image" src="{{ image_url }}"/>
                             {% elseif entity.user.getProfilePicture.widthVsHeight == 2 %}
-                            <img class="photo tall-profile-image" src="{{ prefix ~ image_url }}"/>
+                            <img class="photo tall-profile-image" src="{{ image_url }}"/>
                             {% endif%}
                     </div>
                     {%else%}
