--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Shop/Shop.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Shop/Shop.html.twig
@@ -18,16 +18,15 @@
         {%if user.getProfilePicture %}
             <div id="mobile-context-user-image" class="{% if user.getProfilePicture.widthVsHeight == 2%}center-horizontally{% endif%}">
                 {% set createdAt = user.getCreatedAt %}
-                {% set image_url = 'pp/'~createdAt|date('Y')~'/'
-                ~createdAt|date('m')~'/'
+                {% set image_url = prefix ~ 'uploads/profilepictures/prpf/'
                 ~user.getProfilePicture.path %}
                 {% if user.getProfilePicture.widthVsHeight == 0 %}
-                <img class="photo equal-profile-image"  src="{{ prefix ~ image_url }}"/>
+                <img class="photo equal-profile-image"  src="{{ image_url }}"/>
                 {% elseif user.getProfilePicture.widthVsHeight == 1 %}
                 <span class="helper"></span>
-                <img class="photo fat-profile-image"  src="{{ prefix ~ image_url }}"/>
+                <img class="photo fat-profile-image"  src="{{ image_url }}"/>
                 {% elseif user.getProfilePicture.widthVsHeight == 2 %}
-                <img class="photo tall-profile-image"  src="{{ prefix ~ image_url }}"/>
+                <img class="photo tall-profile-image"  src="{{ image_url }}"/>
                 {% endif%}
             </div>
         {%else%}
