removed parent in categories

--- a/src/FrontEnd/scss/dashboard_styles/dashboard_add_new_item.scss
+++ b/src/FrontEnd/scss/dashboard_styles/dashboard_add_new_item.scss
@@ -361,13 +361,7 @@ a#add_image_trigger:active
     font-weight:800;
 }
 
-/* Parent Category style in drop-down categories selectbox */
-.parent_category
-{
-    background-color:#dae3df;
-    font-weight:bold;
-    text-transform: uppercase;
-}
+/*  */
 #select_category_label
 {
 height: 14px;
