--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Category/AllCategoriesForHeader.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Category/AllCategoriesForHeader.html.twig
@@ -1,73 +1,9 @@
-<table id="categories_table">
-    <tr>
+{% for category in categories %}
+        <a href="javascript:void(0);"
+           class="show_category_trigger"
+           data-id="{{category.id}}"
+            >
+            {{ category.Name }}
+        </a>
+{%endfor%}
 
-    <td>
-            {% for i in 0..3 %}
-                <h4>
-                    <a href="javascript:void(0);"
-                       class="show_category_trigger"
-                       data-id="{{categories[i][0].id}}"
-                       >{{ (categories[i][0].Name~'.'~categories[i][0].Name) | trans }}
-                    </a>
-                </h4>
-                <ul>
-                    {% for subCategory in categories[i][1] %}
-                        <li>
-                            <a href="javascript:void(0);"
-                                class="show_category_trigger"
-                                data-id="{{subCategory.id}}"
-                                >{{ (categories[i][0].Name~'.'~subCategory.Name)| trans }}
-                            </a>
-                            </li>
-                    {%endfor%}
-                </ul>
-            {%endfor%}
-        </td>
-
-        <td>
-            {% for i in 4..7 %}
-                <h4>
-                    <a href="javascript:void(0);"
-                       class="show_category_trigger"
-                       data-id="{{categories[i][0].id}}"
-                       >{{ (categories[i][0].Name~'.'~categories[i][0].Name) | trans }}
-                    </a>
-                </h4>
-                <ul>
-                    {% for subCategory in categories[i][1] %}
-                        <li>
-                            <a href="javascript:void(0);"
-                                class="show_category_trigger"
-                                data-id="{{subCategory.id}}"
-                                >{{ (categories[i][0].Name~'.'~subCategory.Name)| trans }}
-                            </a>
-                            </li>
-                    {%endfor%}
-                </ul>
-            {%endfor%}
-        </td>
-
-        <td>
-             {% for i in 8..18 %}
-                <h4>
-                    <a href="javascript:void(0);"
-                       class="show_category_trigger"
-                       data-id="{{categories[i][0].id}}"
-                       >{{ (categories[i][0].Name~'.'~categories[i][0].Name) | trans }}
-                    </a>
-                </h4>
-                <ul>
-                    {% for subCategory in categories[i][1] %}
-                        <li>
-                            <a href="javascript:void(0);"
-                                class="show_category_trigger"
-                                data-id="{{subCategory.id}}"
-                                >{{ (categories[i][0].Name~'.'~subCategory.Name)| trans }}
-                            </a>
-                            </li>
-                    {%endfor%}
-                </ul>
-            {%endfor%}
-        </td>
-    </tr>
-</table>
