--- a/src/FrontEnd/scss/dashboard_styles/dashboard_header.scss
+++ b/src/FrontEnd/scss/dashboard_styles/dashboard_header.scss
@@ -547,3 +547,13 @@ Navigate by categories in Menu styles
     width: 16px;
     
 }
+
+.alphabet-in-categories
+{
+    font-size: 24px;
+}
+
+.dialog-category-anchor
+{
+    margin-left: 10px;
+}
