--- a/src/FrontEnd/scss/homepage_styles/homepage_header.scss
+++ b/src/FrontEnd/scss/homepage_styles/homepage_header.scss
@@ -148,3 +148,13 @@ Navigate by categories in Menu styles
     
 }
 
+.alphabet-in-categories
+{
+    font-size: 24px;
+}
+
+.dialog-category-anchor
+{
+    margin-left: 10px;
+}
+
