--- a/src/FrontEnd/scss/homepage_styles/shop.scss
+++ b/src/FrontEnd/scss/homepage_styles/shop.scss
@@ -41,7 +41,7 @@
     width:60px;
     height:33px;
     display: block;
-    background: url('../images/spritesheet1.png') no-repeat;
+    background: $sprite1 no-repeat;
     cursor: pointer;
     margin:0 auto;  
     background-position: 47.214% 0;
