--- a/src/FrontEnd/scss/mobile_styles/mobile_other/all_my_network.scss
+++ b/src/FrontEnd/scss/mobile_styles/mobile_other/all_my_network.scss
@@ -1,8 +1,8 @@
 $logoWidth: 156px;
 $headerHeight: 60px;
 $menuItemWidth: 86px;
-$sprite1 :url('../images/spritesheet1.png');
-$sprite3 : url('../images/spritesheet3.png');
+$sprite1 :url('../images/spritesheet.png');
+$sprite3 : url('../images/spritesheet.png');
 $vert:#006233;
 $rouge: #c1272d;
 $black: black;
@@ -81,7 +81,7 @@ $gris:#e1e1e1;
     width:60px;
     height:33px;
     display: block;
-    background: url('../images/spritesheet1.png') no-repeat;
+    background: $sprite1 no-repeat;
     cursor: pointer;
     margin:0 auto;  
     background-position: 41.4% 0;
@@ -110,7 +110,8 @@ $gris:#e1e1e1;
     width:60px;
     height:33px;
     display: block;
-    background: url('../images/spritesheet1.png') no-repeat;
+    background: $sprite1 no-repeat;
+
     cursor: pointer;
     margin:0 auto;  
     background-position: 29.618% 0;//35.48% 0;
