--- a/src/FrontEnd/scss/dashboard_styles/all_my_network.scss
+++ b/src/FrontEnd/scss/dashboard_styles/all_my_network.scss
@@ -1,8 +1,8 @@
 $logoWidth: 156px;
 $headerHeight: 60px;
 $menuItemWidth: 86px;
-$sprite1 :url('../images/spritesheet1.png');
-$sprite3 : url('../images/spritesheet3.png');
+$sprite1 :url('../images/spritesheet.png');
+$sprite3 : url('../images/spritesheet.png');
 $vert:#006233;
 $rouge: #c1272d;
 $black: black;
