--- a/src/FrontEnd/scss/homepage_styles/homepage_styles_main.scss
+++ b/src/FrontEnd/scss/homepage_styles/homepage_styles_main.scss
@@ -13,8 +13,8 @@
 $logoWidth: 156px;
 $headerHeight: 60px;
 $menuItemWidth: 86px;
-$sprite1 :url('../images/spritesheet1.png');
-$sprite3 : url('../images/spritesheet3.png');
+$sprite1 :url('../images/spritesheet.png');
+$sprite3 : url('../images/spritesheet.png');
 $vert:#006233;
 $rouge: #c1272d;
 $black: black;
@@ -187,20 +187,20 @@ a
 #right_direction_arrow
 {
 
-  background: url("../images/spritesheet3.png") no-repeat;
+  background: $sprite1 no-repeat;
   cursor: pointer;
-  background-position: 61.309% 0%;
-  background-size: 3460% 100%;
+  background-position: 17.2% 0%;
+  background-size: 3900% 160%;
   width: 20px;
   height: 36px;
 
 }
 #left_direction_arrow
 {
-    background: url("../images/spritesheet3.png") no-repeat;
+    background: $sprite1 no-repeat;
     cursor: pointer;
-    background-position: 100% 0%;
-    background-size: 3460% 100%;
+    background-position: 24.2% 0%;
+    background-size: 3900% 160%;
     opacity: 0.7;
     width: 20px;
     height: 36px;
