--- a/src/FrontEnd/scss/mobile_styles/mobile_other/mobile_item_show.scss
+++ b/src/FrontEnd/scss/mobile_styles/mobile_other/mobile_item_show.scss
@@ -1,8 +1,8 @@
 
-$sprite1 :url('../images/spritesheet1.png');
-$sprite2 : url('../images/spritesheet2.png');
-$sprite3 : url('../images/spritesheet3.png');
-$sprite4 : url('../images/chat.png');
+$sprite1 :url('../images/spritesheet.png');
+$sprite2 : url('../images/spritesheet.png');
+$sprite3 : url('../images/spritesheet.png');
+$sprite4 : url('../images/spritesheet.png');
 
 $vert:#006233;
 $vert-opace:rgba(0,98,51,0.3);
@@ -227,18 +227,16 @@ $vert-opace7:rgba(0,98,51,0.7);
     display: inline-block;
     width:50px;
     height:40px;
-    background-size: 1547.14% 116.07%;
+    background-size: 1891.4% 160.7%;
 }
 .bought_trigger_on
 {
-    background-position: 86.179% 0;  
+    background-position: 81% 0;
 }
 
 .bought_trigger_off
 {
-
-    background-position: 100% 0;
-    
+    background-position: 75.2% 0;
 }
 
 /* Edit article */
@@ -278,7 +276,7 @@ $vert-opace7:rgba(0,98,51,0.7);
     float:left;
     height:27px;
     margin: 1.5px 0;
-    background: url('../images/spritesheet1.png') no-repeat;
+    background: $sprite1 no-repeat;
     cursor: pointer;
     background-size: 3008.33% 162.5%;
     background-position : 25.5% 0;
@@ -328,7 +326,7 @@ form#delete_article_trigger button
     display:inline-block;
     width:30px;
     height:30px; 
-    background: url('../images/spritesheet2.png') no-repeat;
+    background: $sprite1 no-repeat;
     background-size:1003.125% 100%; 
     background-position:100% 0;
     float:left; 
