--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Post/new.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Post/new.html.twig
@@ -24,7 +24,7 @@
                         {% if form.categories.vars.value is not empty %}
                             {{ form.categories.vars.value[0] == '' and key == 0 ? ' selected ' :(val.value == form.categories.vars.value[0] ? ' selected ' : '') }}
                         {% endif %}
-                    >{{ (val.data.getName~'.'~val.data.getName) | trans }}
+                    >{{ val.data.getName }}
                 </option>
                 {% endfor %}
             </select>
