--- a/src/FrontEnd/scss/mobile_styles/mobile_discussion/mobile_item_show.scss
+++ b/src/FrontEnd/scss/mobile_styles/mobile_discussion/mobile_item_show.scss
@@ -89,3 +89,10 @@
     border: 1px solid rgba(164, 164, 164, 0.3);
     background: rgba(241, 241, 241, 0.65);
 }
+
+.pp-unavailable
+{
+    background: $sprite1 no-repeat;
+    background-size: 2120% 150%;
+    background-position: 55.3% 0;
+}
