--- a/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileShow.html.twig
+++ b/src/Mobile/Bundle/ManagementBundle/Resources/views/Item/mobileShow.html.twig
@@ -80,8 +80,9 @@
                             {% endif%}
                     </div>
                     {%else%}
-                        <div id="post-owner-image" class="center-horizontally">
-                            <img class="photo equal" src="{{asset('pp/index.png') }}" height= 25/>
+                        <div class="post-owner-image pp-unavailable"
+                             id="post-owner-image"
+                             data-wVsH="0">
                         </div>
                     {% endif%}
                     <div class="post-owner-name" id="post-owner-name">
