--- a/src/Shop/Bundle/ManagementBundle/Resources/views/MyShop/MyShop.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/MyShop/MyShop.html.twig
@@ -27,9 +27,7 @@
             {% endif%}
         </div>
     {% else %}
-        <div id="center-context-user-image" class="center-horizontally">
-            <img class="photo equal" src="{{ asset('pp/index.png') }}"/>
-        </div>
+        <div id="center-context-user-image" class="pp-unavailable"></div>
     {% endif %}   
 </div>
 
