--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Post/show.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Post/show.html.twig
@@ -188,10 +188,9 @@
                             {% endif%}
                     </div>
                     {% else %}
-                        <div class="post-owner-image center-horizontally"
+                        <div class="post-owner-image pp-unavailable"
                             id="post-owner-image"
                             data-wVsH="0">
-                            <img class="photo equal" src="{{ asset('pp/index.png') }}"/>
                         </div>
                     {% endif%}
                     <div class="post-owner-name" id="post-owner-name">
