--- a/src/Shop/Bundle/ManagementBundle/Resources/views/Shop/Shop.html.twig
+++ b/src/Shop/Bundle/ManagementBundle/Resources/views/Shop/Shop.html.twig
@@ -21,9 +21,7 @@
                 {% endif%}
         </div>        
     {% else %}
-        <div id="center-context-user-image" class="center-horizontally">
-            <img class="photo equal" src="{{ asset('pp/index.png') }}"/>
-        </div>
+        <div id="center-context-user-image" class="pp-unavailable"></div>
     {%endif%}
     <div id="center-context-user-name">
         {% if total_number_of_items >0 %}
